# fire_jixiebi_project

./: .gitignore  first_use.sh  learn.md  readme.md
src/: read.py  test.py
src/area_scan_camera/: package.xml  setup.cfg  setup.py
src/area_scan_camera/area_scan_camera/: VSensorSDK_linux.py  camera_control.py  program_entrance.py
src/area_scan_camera/launch/: camera_control.launch.py
src/base_msgs/: CMakeLists.txt  package.xml
src/base_msgs/msg/: ControlMsg.msg  DataSend.msg
src/elite_arm_controller/: package.xml  setup.cfg  setup.py
src/elite_arm_controller/config/: Tcpoffset.yaml
src/elite_arm_controller/elite_arm_controller/: first_scan.py  install.py  movecontrol.py  second_scan.py  uninstall.py
src/elite_arm_controller/launch/: execute.launch.py
src/elite_arm_controller/scripts/: FK.py  iK.py  simple_pose_publisher.py
src/elite_arm_driver/: setup.py
src/elite_arm_driver/elite_arm_driver/: elite_arm_fake_ec.py  elite_arm_kinematics.py  elite_arm_move.py  elite_arm_servo.py  elite_arm_set_io.py  elite_arm_set_tcp.py  elite_arm_trajectory_action.py  elite_driver_node.py
src/elite_arm_driver/launch/: bringupec66.launch.py
src/elite_description/config/: joint_names_ec66_description.yaml
src/elite_description/launch/: simulate.launch.py  simulate_ec66.launch.py
src/elite_description/urdf/: ec66_description.urdf  ec66_description_fake.urdf
src/elite_msgs/: CMakeLists.txt
src/elite_msgs/srv/: AddPathPoint.srv  RobotServo.srv  SetIO.srv  SetTCP.srv
src/handeye_coord_transformer/: package.xml  setup.cfg  setup.py
src/handeye_coord_transformer/config/: EHMatrix.txt  handeye_calibration.yaml
src/handeye_coord_transformer/handeye_coord_transformer/: handeye_transformer_node.py  plane_normal_to_rpy_node.py
src/handeye_coord_transformer/launch/: handeye_system.launch.py
src/point_rgb_address/: package.xml  setup.cfg  setup.py
src/point_rgb_address/launch/: address_control.launch.py
src/point_rgb_address/point_rgb_address/: address_control.py  calculate_rotation.py  centralized_computing.py  segment_balanced.py  segment_dilate.py
src/point_rgb_address/results/: target_0_balanced.pcd  target_0_info.txt
src/sensor/: package.xml  setup.py
src/sensor/launch/: sensor.launch.py
src/sensor/sensor/: inclination_sensor_node.py  infrared_distance_node.py
src/start/: CMakeLists.txt  package.xml
src/start/config/: init.yaml
src/start/launch/: start.launch.py
src/testpy/: handeye.test.py  joint_pose.py  save.py  sub_coordnate.py  tesr.py  test_coord_publisher.py  test_motor_angle.py  test_motor_simple.py  test_n.py  test_soprt_pose.py  torque_test_fig.py
src/testpy/torque_data/: install_torque_data_20260201_152831.csv  install_torque_data_20260201_152831_stats.txt  install_torque_data_20260201_163106.csv  install_torque_data_20260201_163106_stats.txt  install_torque_data_20260201_163530.csv  install_torque_data_20260201_163530_stats.txt  install_torque_data_20260202_140812.csv  install_torque_data_20260202_140812_stats.txt  install_torque_data_20260202_141930.csv  install_torque_data_20260202_141930_stats.txt  uninstall_torque_data_20260201_152246.csv  uninstall_torque_data_20260201_152246_stats.txt  uninstall_torque_data_20260201_155858.csv  uninstall_torque_data_20260201_155858_stats.txt  uninstall_torque_data_20260201_162329.csv  uninstall_torque_data_20260201_162329_stats.txt  uninstall_torque_data_20260201_164725.csv  uninstall_torque_data_20260201_164725_stats.txt  uninstall_torque_data_20260202_141158.csv  uninstall_torque_data_20260202_141158_stats.txt
src/unitreemotor/: CMakeLists.txt  package.xml
src/unitreemotor/launch/: motor.launch.py
src/unitreemotor/src/: simple_test_node.cpp  unitree_motor_node.cpp
src/unitreemotor/unitree_actuator_sdk/: CMakeLists.txt
src/unitreemotor/unitree_actuator_sdk/example/: changeID.cpp
src/unitreemotor_msgs/: CMakeLists.txt  package.xml
src/unitreemotor_msgs/msg/: MotorCommand.msg  MotorStatus.msg
src/unitreemotor_msgs/srv/: MotorControl.srv
