<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>handeye_coord_transformer</name>
  <version>0.0.0</version>
  <description>Hand-eye coordination transformation package for robot arm vision-guided control</description>
  <maintainer email="neepu-jk@todo.todo">neepu-jk</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建依赖 -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>elite_msgs</depend>

  <!-- 测试依赖 --> 
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>